added contact and portfolio html files

--- a/contact.html
+++ b/contact.html
@@ -39,45 +39,19 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" class="navRight" href="#">Contact</a>
-          <a class="nav-link" class="navRight" href="#">Portfolio</a
-          ><a class="nav-link active" class="navRight" href="#"
-            >About <span class="sr-only">(current)</span></a
+          <a class="nav-link active" class="navRight" href="#"
+            >Contact <span class="sr-only">(current)</span></a
           >
+          <a class="nav-link" class="navRight" href="#">Portfolio</a>
+          <a class="nav-link" class="navRight" href="#">About</a>
         </div>
       </div>
     </nav>
 
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">About Me</h1>
+        <h1 class="display-4">Contact</h1>
         <hr class="my-4" />
-        <p class="aboutme">
-          <img class="profilepic" src="images/profilepic.jpeg" width="250px" />
-          Alison Lubar teaches high school English by day and yoga by night. Her
-          life's work, aside from wordsmithing, has evolved into bringing
-          mindfulness practices, and sometimes even poetry, to young people. Her
-          work has been published by or appeared in SWWIM Every Day, trampset,
-          The Esthetic Apostle, Lady Blue Literary Arts Journal, Cathexis
-          Northwest Press, High Shelf, Gravitas, great weather for MEDIA, Toho,
-          Rowan University’s Glassworks, Giovanni’s Room anthology
-          <em>queerbook</em>; she has work forthcoming with Fearsome Critters,
-          Storm of Blue Press, and Apiary Magazine. <br /><br />
-          Alison graduated from the University of Delaware in 2007, with a
-          double major in Philosophy and Italian literature. In 2009, while
-          teaching at University City High School in West Philadelphia, she
-          received her MS Ed with a concentration in Urban Education from the
-          University of Pennsylvania. In 2016, after completing a 95hr Kids'
-          Yoga Teacher Training, she finished her RYT 200 with Anjali Power
-          Yoga, where she teaches power vinyasa classes. Alison also currently
-          teaches at a public high school in New Jersey, where she has created
-          courses in philosophy, mindfulness, & yoga, and developed an
-          restorative practices program.
-          <br /><br />
-          Though she is Californian by birth, Alison currently lives in New
-          Jersey with her partner and their respective dogs. She hopes to one
-          day, with her pack, return Westward.
-        </p>
       </div>
     </div>
 
