--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="./style/bootstrap.min.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 
-    <title>Alison Lubar - Portfolio</title>
+    <title>Alison Lubar - About Me</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       class="navbar navbar-expand-lg navbar-light"
       style="background-color: #e3f2fd"
     >
-      <a class="navbar-brand" href="#">Alison Lubar</a>
+      <a class="navbar-brand" href="./index.html">Alison Lubar</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -39,9 +39,10 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" class="navRight" href="#">Contact</a>
-          <a class="nav-link" class="navRight" href="#">Portfolio</a
-          ><a class="nav-link active" class="navRight" href="#"
+          <a class="nav-link" class="navRight" href="./contact.html">Contact</a>
+          <a class="nav-link" class="navRight" href="./portfolio.html"
+            >Portfolio</a
+          ><a class="nav-link active" class="navRight" href="./index.html"
             >About <span class="sr-only">(current)</span></a
           >
         </div>
