--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style/bootstrap.min.css" />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="./style/bootstrap.min.css" />
+    <link rel="stylesheet" href="./style/style.css" />
 
     <title>Alison Lubar - Portfolio</title>
   </head>
@@ -24,7 +24,7 @@
       class="navbar navbar-expand-lg navbar-light"
       style="background-color: #e3f2fd"
     >
-      <a class="navbar-brand" href="#">Alison Lubar</a>
+      <a class="navbar-brand" href="./index.html">Alison Lubar</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -39,11 +39,11 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" class="navRight" href="#">Contact</a>
-          <a class="nav-link active" class="navRight" href="#"
+          <a class="nav-link" class="navRight" href="./contact.html">Contact</a>
+          <a class="nav-link active" class="navRight" href="./portfolio.html"
             >Portfolio <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link" class="navRight" href="#">About</a>
+          <a class="nav-link" class="navRight" href="./index.html">About</a>
         </div>
       </div>
     </nav>
@@ -52,6 +52,34 @@
       <div class="jumbotron">
         <h1 class="display-4">Portfolio</h1>
         <hr class="my-4" />
+        <div class="row">
+          <div class="col-md-auto">
+            <img
+              class="portPlaceholder"
+              src="https://via.placeholder.com/350/"
+            />
+            <img
+              class="portPlaceholder"
+              src="https://via.placeholder.com/350/"
+            />
+          </div>
+          <div class="col-md-auto">
+            <img
+              class="portPlaceholder"
+              src="https://via.placeholder.com/350/"
+            />
+            <img
+              class="portPlaceholder"
+              src="https://via.placeholder.com/350/"
+            />
+          </div>
+          <div class="col-md-auto">
+            <img
+              class="portPlaceholder"
+              src="https://via.placeholder.com/350/"
+            />
+          </div>
+        </div>
       </div>
     </div>
 
