fixed mobile view of h4 text and added copyright, changed one div to main

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <main class="container">
       <div class="jumbotron">
         <h1 class="display-4">Contact</h1>
         <hr class="my-4" />
@@ -85,7 +85,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -106,8 +106,8 @@
     <footer class="card" id="footer">
       <div class="card-body" style="background-color: #e3f2fd">
         <p>
-          Copyright will go here! <br />
-          Background photo by Felix Mittermeier from Pexels.
+          Copyright &#169; 2020 Alison Lubar <br />
+          Background Credit: Felix Mittermeier, Pexels
         </p>
       </div>
     </footer>
