--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
 
     <link
@@ -49,12 +49,17 @@
       </div>
     </nav>
 
-    <div class="container">
+    <main class="container">
       <div class="jumbotron">
         <h1 class="display-4">About Me</h1>
         <hr class="my-4" />
         <p class="aboutme">
-          <img class="profilepic" src="images/profilepic.jpeg" width="250px" />
+          <img
+            class="profilepic"
+            src="images/profilepic.jpeg"
+            alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
+            width="250px"
+          />
           Alison Lubar teaches high school English by day and yoga by night. Her
           life's work, aside from wordsmithing, has evolved into bringing
           mindfulness practices, and sometimes even poetry, to young people. Her
@@ -80,7 +85,7 @@
           day, with her pack, return Westward.
         </p>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -101,8 +106,8 @@
     <footer class="card" id="footer">
       <div class="card-body" style="background-color: #e3f2fd">
         <p>
-          Copyright will go here! <br />
-          Background photo by Felix Mittermeier from Pexels.
+          Copyright &#169; 2020 Alison Lubar <br />
+          Background Credit: Felix Mittermeier, Pexels
         </p>
       </div>
     </footer>
