--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,12 @@
       </div>
     </nav>
 
-    <div class="container">
+    <main class="container">
       <div class="jumbotron">
         <h1 class="display-4">Portfolio</h1>
         <hr class="my-4" />
         <div class="row">
-          <div class="col-md-auto">
+          <div class="col-sm-auto">
             <img
               class="portPlaceholder"
               src="https://via.placeholder.com/350/"
@@ -63,7 +63,7 @@
               src="https://via.placeholder.com/350/"
             />
           </div>
-          <div class="col-md-auto">
+          <div class="col-sm-auto">
             <img
               class="portPlaceholder"
               src="https://via.placeholder.com/350/"
@@ -73,7 +73,7 @@
               src="https://via.placeholder.com/350/"
             />
           </div>
-          <div class="col-md-auto">
+          <div class="col-sm-auto">
             <img
               class="portPlaceholder"
               src="https://via.placeholder.com/350/"
@@ -81,7 +81,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -102,8 +102,8 @@
     <footer class="card" id="footer">
       <div class="card-body" style="background-color: #e3f2fd">
         <p>
-          Copyright will go here! <br />
-          Background photo by Felix Mittermeier from Pexels.
+          Copyright &#169; 2020 Alison Lubar <br />
+          Background Credit: Felix Mittermeier, Pexels
         </p>
       </div>
     </footer>
