added social media links and formatted CSS accordingly

--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
           Though she is Californian by birth, Alison currently lives in New
           Jersey with her partner and their respective dogs. She hopes to one
           day, with her pack, return Westward.
+          <br />
+        </p>
+        <hr class="my-4" />
+        <h2 class="socialMedia">Social Media</h2>
+        <p class="aboutme smLinks">
+          GitHub:
+          <a href="https://github.com/theoriginalison">theoriginalison</a>
+          <br />
+          Twitter:
+          <a href="https://twitter.com/theoriginalison?lang=en"
+            >@theoriginalison</a
+          ><br />
+          Facebook:
+          <a href="https://www.facebook.com/alison.lubar/">Click Here</a>
+          <br />
+          Instagram: You'll need to email her first. That's a fairly personal
+          question...
         </p>
       </div>
     </main>
