aligned nav to right side and added rows for responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ml-auto">
           <a class="nav-link" class="navRight" href="./contact.html">Contact</a>
           <a class="nav-link active" class="navRight" href="./portfolio.html"
             >Portfolio <span class="sr-only">(current)</span></a
@@ -49,38 +49,40 @@
     </nav>
 
     <main class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Portfolio</h1>
-        <hr class="my-4" />
-        <div class="row">
-          <div class="col-sm-auto">
-            <img
-              class="portPlaceholder"
-              src="https://via.placeholder.com/350/"
-            />
-            <img
-              class="portPlaceholder"
-              src="https://via.placeholder.com/350/"
-            />
-          </div>
-          <div class="col-sm-auto">
-            <img
-              class="portPlaceholder"
-              src="https://via.placeholder.com/350/"
-            />
-            <img
-              class="portPlaceholder"
-              src="https://via.placeholder.com/350/"
-            />
-          </div>
-          <div class="col-sm-auto">
-            <img
-              class="portPlaceholder"
-              src="https://via.placeholder.com/350/"
-            />
+      <section class="row">
+        <div class="jumbotron col-sm-10">
+          <h1 class="display-4">Portfolio</h1>
+          <hr class="my-4" />
+          <div class="row">
+            <div class="col-sm-auto">
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+              />
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+              />
+            </div>
+            <div class="col-sm-auto">
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+              />
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+              />
+            </div>
+            <div class="col-sm-auto">
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+              />
+            </div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="card" id="footer">
