--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ml-auto">
           <a class="nav-link active" class="navRight" href="./contact.html"
             >Contact <span class="sr-only">(current)</span></a
           >
@@ -51,40 +51,42 @@
     </nav>
 
     <main class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Contact</h1>
-        <hr class="my-4" />
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="Name"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="exampleFormControlInput1"
-              placeholder="name@example.com"
-            />
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Message</label>
-            <textarea
-              class="form-control"
-              id="exampleFormControlTextarea1"
-              placeholder="Type your message to Alison here."
-              rows="3"
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
+      <section class="row">
+        <div class="jumbotron col-sm-10">
+          <h1 class="display-4">Contact</h1>
+          <hr class="my-4" />
+          <form>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Name"
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="name@example.com"
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                placeholder="Type your message to Alison here."
+                rows="3"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <footer class="card" id="footer">
