added img-fluid instead of col-sm-4 to portfolio img and tried to make placeholder in contact.html responsive

--- a/contact.html
+++ b/contact.html
@@ -58,12 +58,11 @@
           <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Name</label>
-              <input
-                type="text"
+              <textarea
                 class="form-control"
                 id="exampleFormControlInput1"
                 placeholder="Name"
-              />
+              ></textarea>
             </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email</label>
