--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <hr class="my-4" />
           <p class="aboutme">
             <img
-              class="profilepic col-sm-4"
+              class="profilepic img-fluid"
               src="images/profilepic.jpeg"
               alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
               width="250px"
@@ -95,14 +95,14 @@
           <h2 class="socialMedia">Social Media</h2>
           <p class="aboutme smLinks">
             GitHub:
-            <a href="https://github.com/theoriginalison">theoriginalison</a>
+            <a href="https://github.com/theoriginalison" target="_blank" >theoriginalison</a>
             <br />
             Twitter:
-            <a href="https://twitter.com/theoriginalison?lang=en"
+            <a href="https://twitter.com/theoriginalison?lang=en" target="_blank" 
               >@theoriginalison</a
             ><br />
             Facebook:
-            <a href="https://www.facebook.com/alison.lubar/">Click Here</a>
+            <a href="https://www.facebook.com/alison.lubar/" target="_blank" >Click Here</a>
             <br />
             Instagram: You'll need to email her first. That's a fairly personal
             question...
