checked with html validator and got rid of duplicate classes, closed tags, added alts to images in portfolio.html

--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-link" class="navRight" href="./contact.html">Contact</a>
-          <a class="nav-link" class="navRight" href="./portfolio.html"
-            >Portfolio</a
-          ><a class="nav-link active" class="navRight" href="./index.html"
+          <a class="nav-link navRight" href="./contact.html">Contact</a>
+          <a class="nav-link navRight" href="./portfolio.html">Portfolio</a
+          ><a class="nav-link active navRight" href="./index.html"
             >About <span class="sr-only">(current)</span></a
           >
         </div>
@@ -53,61 +52,68 @@
       <div class="row">
         <div class="jumbotron col-sm-10">
           <section>
-          <h1 class="display-4">About Me</h1>
-          <hr class="my-4" />
-          <p class="aboutme">
-            <img
-              class="profilepic img-fluid"
-              src="images/profilepic.jpeg"
-              alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
-              width="250px"
-            />
-            Alison Lubar teaches high school English by day and yoga by night.
-            Her life's work, aside from wordsmithing, has evolved into bringing
-            mindfulness practices, and sometimes even poetry, to young people.
-            Her work has been published by or appeared in SWWIM Every Day,
-            trampset, The Esthetic Apostle, Lady Blue Literary Arts Journal,
-            Cathexis Northwest Press, High Shelf, Gravitas, great weather for
-            MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s Room
-            anthology
-            <em>queerbook</em>; she has work forthcoming with Fearsome Critters,
-            Storm of Blue Press, and Apiary Magazine. <br /><br />
-            Alison graduated from the University of Delaware in 2007, with a
-            double major in Philosophy and Italian literature. In 2009, while
-            teaching at University City High School in West Philadelphia, she
-            received her MS Ed with a concentration in Urban Education from the
-            University of Pennsylvania. In 2016, after completing a 95hr Kids'
-            Yoga Teacher Training, she finished her RYT 200 with Anjali Power
-            Yoga, where she teaches power vinyasa classes. Alison also currently
-            teaches at a public high school in New Jersey, where she has created
-            courses in philosophy, mindfulness, & yoga, and developed an
-            restorative practices program.
-            <br /><br />
-            Though she is Californian by birth, Alison currently lives in New
-            Jersey with her partner and their respective dogs. She hopes to one
-            day, with her pack, return Westward.
-            <br />
-          </p>
-        
-          <hr class="my-4" />
-        </section>
-        <section>
-          <h2 class="socialMedia">Social Media</h2>
-          <p class="aboutme smLinks">
-            GitHub:
-            <a href="https://github.com/theoriginalison" target="_blank" >theoriginalison</a>
-            <br />
-            Twitter:
-            <a href="https://twitter.com/theoriginalison?lang=en" target="_blank" 
-              >@theoriginalison</a
-            ><br />
-            Facebook:
-            <a href="https://www.facebook.com/alison.lubar/" target="_blank" >Click Here</a>
-            <br />
-            Instagram: You'll need to email her first. That's a fairly personal
-            question...
-          </p>
-        </section>
+            <h1 class="display-4">About Me</h1>
+            <hr class="my-4" />
+            <p class="aboutme">
+              <img
+                class="profilepic img-fluid"
+                src="images/profilepic.jpeg"
+                alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
+                width="250px"
+              />
+              Alison Lubar teaches high school English by day and yoga by night.
+              Her life's work, aside from wordsmithing, has evolved into
+              bringing mindfulness practices, and sometimes even poetry, to
+              young people. Her work has been published by or appeared in SWWIM
+              Every Day, trampset, The Esthetic Apostle, Lady Blue Literary Arts
+              Journal, Cathexis Northwest Press, High Shelf, Gravitas, great
+              weather for MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s
+              Room anthology
+              <em>queerbook</em>; she has work forthcoming with Fearsome
+              Critters, Storm of Blue Press, and Apiary Magazine. <br /><br />
+              Alison graduated from the University of Delaware in 2007, with a
+              double major in Philosophy and Italian literature. In 2009, while
+              teaching at University City High School in West Philadelphia, she
+              received her MS Ed with a concentration in Urban Education from
+              the University of Pennsylvania. In 2016, after completing a 95hr
+              Kids' Yoga Teacher Training, she finished her RYT 200 with Anjali
+              Power Yoga, where she teaches power vinyasa classes. Alison also
+              currently teaches at a public high school in New Jersey, where she
+              has created courses in philosophy, mindfulness, & yoga, and
+              developed an restorative practices program.
+              <br /><br />
+              Though she is Californian by birth, Alison currently lives in New
+              Jersey with her partner and their respective dogs. She hopes to
+              one day, with her pack, return Westward.
+              <br />
+            </p>
+
+            <hr class="my-4" />
+          </section>
+          <section>
+            <h2 class="socialMedia">Social Media</h2>
+            <p class="aboutme smLinks">
+              GitHub:
+              <a href="https://github.com/theoriginalison" target="_blank"
+                >theoriginalison</a
+              >
+              <br />
+              Twitter:
+              <a
+                href="https://twitter.com/theoriginalison?lang=en"
+                target="_blank"
+                >@theoriginalison</a
+              ><br />
+              Facebook:
+              <a href="https://www.facebook.com/alison.lubar/" target="_blank"
+                >Click Here</a
+              >
+              <br />
+              Instagram: You'll need to email her first. That's a fairly
+              personal question...
+            </p>
+          </section>
+        </div>
       </div>
     </main>
 
