--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-link" class="navRight" href="./contact.html">Contact</a>
-          <a class="nav-link active" class="navRight" href="./portfolio.html"
+          <a class="nav-link navRight" href="./contact.html">Contact</a>
+          <a class="nav-link active navRight" href="./portfolio.html"
             >Portfolio <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link" class="navRight" href="./index.html">About</a>
+          <a class="nav-link navRight" href="./index.html">About</a>
         </div>
       </div>
     </nav>
@@ -58,26 +58,31 @@
               <img
                 class="portPlaceholder"
                 src="https://via.placeholder.com/350/"
+                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
               />
               <img
                 class="portPlaceholder"
                 src="https://via.placeholder.com/350/"
-              />
-            </div>
-            <div class="col-sm-auto">
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-              />
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
+                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
               />
             </div>
             <div class="col-sm-auto">
               <img
                 class="portPlaceholder"
                 src="https://via.placeholder.com/350/"
+                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
+              />
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
+              />
+            </div>
+            <div class="col-sm-auto">
+              <img
+                class="portPlaceholder"
+                src="https://via.placeholder.com/350/"
+                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
               />
             </div>
           </div>
