--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,11 @@
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-link active" class="navRight" href="./contact.html"
+          <a class="nav-link active navRight" href="./contact.html"
             >Contact <span class="sr-only">(current)</span></a
           >
-          <a class="nav-link" class="navRight" href="./portfolio.html"
-            >Portfolio</a
-          >
-          <a class="nav-link" class="navRight" href="./index.html">About</a>
+          <a class="nav-link navRight" href="./portfolio.html">Portfolio</a>
+          <a class="nav-link navRight" href="./index.html">About</a>
         </div>
       </div>
     </nav>
@@ -58,20 +56,20 @@
           <form>
             <div class="form-group">
               <label for="exampleFormControlInput1">Name</label>
-              <textarea
+              <input
                 class="form-control"
                 id="exampleFormControlInput1"
                 placeholder="Name"
-              ></textarea>
+              />
             </div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Email</label>
-              <input
+              <textarea
                 type="email"
                 class="form-control"
                 id="exampleFormControlInput1"
                 placeholder="name@example.com"
-              />
+              ></textarea>
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Message</label>
