commented out IG

--- a/index.html
+++ b/index.html
@@ -1,145 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=yes"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style/bootstrap.min.css" />
-    <link rel="stylesheet" href="./style/style.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
 
-    <title>Alison Lubar - About Me</title>
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style/bootstrap.min.css" />
+  <link rel="stylesheet" href="./style/style.css" />
 
-  <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #e3f2fd"
-    >
-      <a class="navbar-brand" href="./index.html">Alison Lubar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <title>Alison Lubar - About Me</title>
+</head>
 
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-          <a class="nav-link navRight" href="./contact.html">Contact</a>
-          <a class="nav-link navRight" href="./portfolio.html">Portfolio</a
-          ><a class="nav-link active navRight" href="./index.html"
-            >About <span class="sr-only">(current)</span></a
-          >
-        </div>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd">
+    <a class="navbar-brand" href="./index.html">Alison Lubar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link navRight" href="./contact.html">Contact</a>
+        <a class="nav-link navRight" href="./portfolio.html">Portfolio</a><a class="nav-link active navRight"
+          href="./index.html">About <span class="sr-only">(current)</span></a>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <main class="container">
-      <div class="row">
-        <div class="jumbotron col-sm-10">
-          <section>
-            <h1 class="display-4">About Me</h1>
-            <hr class="my-4" />
-            <p class="aboutme">
-              <img
-                class="profilepic img-fluid"
-                src="images/profilepic.jpeg"
-                alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
-                width="250px"
-              />
-              Alison Lubar teaches high school English by day and yoga by night.
-              Her life's work, aside from wordsmithing, has evolved into
-              bringing mindfulness practices, and sometimes even poetry, to
-              young people. Her work has been published by or appeared in SWWIM
-              Every Day, trampset, The Esthetic Apostle, Lady Blue Literary Arts
-              Journal, Cathexis Northwest Press, High Shelf, Gravitas, great
-              weather for MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s
-              Room anthology
-              <em>queerbook</em>; she has work forthcoming with Fearsome
-              Critters, Storm of Blue Press, and Apiary Magazine. <br /><br />
-              Alison graduated from the University of Delaware in 2007, with a
-              double major in Philosophy and Italian literature. In 2009, while
-              teaching at University City High School in West Philadelphia, she
-              received her MS Ed with a concentration in Urban Education from
-              the University of Pennsylvania. In 2016, after completing a 95hr
-              Kids' Yoga Teacher Training, she finished her RYT 200 with Anjali
-              Power Yoga, where she teaches power vinyasa classes. Alison also
-              currently teaches at a public high school in New Jersey, where she
-              has created courses in philosophy, mindfulness, & yoga, and
-              developed an restorative practices program.
-              <br /><br />
-              Though she is Californian by birth, Alison currently lives in New
-              Jersey with her partner and their respective dogs. She hopes to
-              one day, with her pack, return Westward.
-              <br />
-            </p>
+  <main class="container">
+    <div class="row">
+      <div class="jumbotron col-sm-10">
+        <section>
+          <h1 class="display-4">About Me</h1>
+          <hr class="my-4" />
+          <p class="aboutme">
+            <img class="profilepic img-fluid" src="images/profilepic.jpeg"
+              alt="Alison looking to the right of the screen; she is wearing a black sleeveless blouse with white medallion designs. Her hair is pulled back, and she is smiling. There is a sunset behind her."
+              width="250px" />
+            Alison Lubar teaches high school English by day and yoga by night.
+            Her life's work, aside from wordsmithing, has evolved into
+            bringing mindfulness practices, and sometimes even poetry, to
+            young people. Her work has been published by or appeared in SWWIM
+            Every Day, trampset, The Esthetic Apostle, Lady Blue Literary Arts
+            Journal, Cathexis Northwest Press, High Shelf, Gravitas, great
+            weather for MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s
+            Room anthology
+            <em>queerbook</em>; she has work forthcoming with Fearsome
+            Critters, Storm of Blue Press, and Apiary Magazine. <br /><br />
+            Alison graduated from the University of Delaware in 2007, with a
+            double major in Philosophy and Italian literature. In 2009, while
+            teaching at University City High School in West Philadelphia, she
+            received her MS Ed with a concentration in Urban Education from
+            the University of Pennsylvania. In 2016, after completing a 95hr
+            Kids' Yoga Teacher Training, she finished her RYT 200 with Anjali
+            Power Yoga, where she teaches power vinyasa classes. Alison also
+            currently teaches at a public high school in New Jersey, where she
+            has created courses in philosophy, mindfulness, & yoga, and
+            developed an restorative practices program.
+            <br /><br />
+            Though she is Californian by birth, Alison currently lives in New
+            Jersey with her partner and their respective dogs. She hopes to
+            one day, with her pack, return Westward.
+            <br />
+          </p>
 
-            <hr class="my-4" />
-          </section>
-          <section>
-            <h2 class="socialMedia">Social Media</h2>
-            <p class="aboutme smLinks">
-              GitHub:
-              <a href="https://github.com/theoriginalison" target="_blank"
-                >theoriginalison</a
-              >
-              <br />
-              Twitter:
-              <a
-                href="https://twitter.com/theoriginalison?lang=en"
-                target="_blank"
-                >@theoriginalison</a
-              ><br />
-              Facebook:
-              <a href="https://www.facebook.com/alison.lubar/" target="_blank"
-                >Click Here</a
-              >
-              <br />
+          <hr class="my-4" />
+        </section>
+        <section>
+          <h2 class="socialMedia">Social Media</h2>
+          <p class="aboutme smLinks">
+            GitHub:
+            <a href="https://github.com/theoriginalison" target="_blank">theoriginalison</a>
+            <br />
+            Twitter:
+            <a href="https://twitter.com/theoriginalison?lang=en" target="_blank">@theoriginalison</a><br />
+            Facebook:
+            <a href="https://www.facebook.com/alison.lubar/" target="_blank">Click Here</a>
+            <!-- <br />
               Instagram: You'll need to email her first. That's a fairly
-              personal question...
-            </p>
-          </section>
-        </div>
+              personal question... -->
+          </p>
+        </section>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer class="card" id="footer">
-      <div class="card-body" style="background-color: #e3f2fd">
-        <p>
-          Copyright &#169; 2020 Alison Lubar <br />
-          Background Credit: Felix Mittermeier, Pexels
-        </p>
-      </div>
-    </footer>
+  <footer class="card" id="footer">
+    <div class="card-body" style="background-color: #e3f2fd">
+      <p>
+        Copyright &#169; 2020 Alison Lubar <br />
+        Background Credit: Felix Mittermeier, Pexels
+      </p>
+    </div>
+  </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
